--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+main {
+    text-align: center;
+}
+
 h1 {
     font-size: 2.4rem;
     text-align: center;
@@ -50,3 +54,22 @@ button:last-of-type {
     background-color: #ff5722;
 }
 
+[type="checkbox"] {
+    display: none;
+}
+
+label {
+    padding-left: 5px;
+    position: relative;
+}
+
+label::before {
+    content: '';
+    border: 2px solid white;
+    border-radius: 3px;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    left: -22px;
+
+}
