--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,11 @@ label::before {
 }
 
 @media (min-width: 1024px) {
+    main {
+        max-width: 1250px;
+        margin: 0 auto;
+    }
+    
     h1 {
         font-size: 3.6rem;
     }
